--- a/assessment.html
+++ b/assessment.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="assessment.css" />
-    <title>あなたのいいところ診断</title>
+    <title>gennsyoが作ったあなたのいいところ診断</title>
     <meta name="twitter:card" content="summary" />
     <meta property="og:url" content="https://gennsyo.github.io/assessment/assessment.html" />
     <meta property="og:title" content="あなたのいいところ診断" />
